# wp-fb-new-post

./: .gitignore  Cargo.toml  README.md
src/: app.rs  cli.rs  config.rs  errors.rs  io_utils.rs  main.rs  models.rs  utils.rs  wordpress.rs  workflow.rs  wp_tags.rs
src/gemini/: http_request.rs  linkify.rs  research.rs  social.rs
src/google/: auth.rs  mod.rs  sheets.rs
src/openai/: http_request.rs  linkify.rs  mod.rs  research.rs  social.rs
src/providers/: gemini.rs  mod.rs  openai.rs
