[package]
name = "wp-fb-new-post"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["std", "clock"] }
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
gcp_auth = "0.12.5"
html2text = "0.16.7"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.12.25", features = ["json", "gzip", "charset", "http2", "rustls-tls"] }
rust_xlsxwriter = "0.92.2"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
url = "2.5.7"

